# timeit

./: README.md  changelog.md  timeit.cabal
appsrc/: Main.hs
src/: Histogram.hs  Main.hs  Render.hs  Storage.hs  Types.hs
tests/: Generators.hs  Main.hs
