name:                timeit
version:             0.0.0.2
synopsis:            retrospective timing utility
description:         Tracks how long things run.
homepage:            http://github.com/creswick/timeit
Bug-Reports:         http://github.com/creswick/timeit/issues
category:            Tools
license:             BSD3
License-file:        LICENSE
author:              Rogan Creswick
maintainer:          creswick@gmail.com
Cabal-Version:       >=1.18
build-type:          Simple
Extra-Source-Files:  changelog.md

source-repository head
  type:     git
  location: git://github.com/creswick/timeit.git

Executable timeit
   default-language: Haskell2010
   Main-Is:          Main.hs
   hs-source-dirs:   src

   Build-depends:    base >= 4.7 && <= 6,
                     process,
                     time,
                     filepath,
                     directory,
                     configurator

   ghc-options:      -Wall -rtsopts
