name:                timeit
version:             0.0.0.3
synopsis:            retrospective timing utility
description:         Tracks how long things run.
homepage:            http://github.com/creswick/timeit
Bug-Reports:         http://github.com/creswick/timeit/issues
category:            Tools
license:             BSD3
License-file:        LICENSE
author:              Rogan Creswick
maintainer:          creswick@gmail.com
Cabal-Version:       >=1.18
build-type:          Simple
Extra-Source-Files:  changelog.md

source-repository head
  type:     git
  location: git://github.com/creswick/timeit.git

Library
   default-language: Haskell2010
   hs-source-dirs:   src

   Exposed-modules:  Storage
                     Types
                     Histogram
                     Render

   Build-depends:    base >= 4.7 && <= 6,
                     process,
                     time,
                     filepath,
                     directory,
                     configurator,
                     containers,
                     cassava,
                     bytestring,
                     vector,
                     statistics,
                     MissingH,
                     pretty

   ghc-options:      -Wall

Executable timeit
   default-language: Haskell2010
   Main-Is:          Main.hs
   hs-source-dirs:   appsrc

   Build-depends:    base >= 4.7 && <= 6,
                     timeit,
                     process,
                     time,
                     filepath,
                     directory,
                     configurator,
                     containers,
                     cassava,
                     bytestring,
                     vector,
                     statistics,
                     MissingH,
                     pretty

   ghc-options:      -Wall -rtsopts

test-suite tests
   default-language: Haskell2010
   type: exitcode-stdio-1.0

   Main-Is:          Main.hs
   hs-source-dirs:   tests

   Other-modules:    Generators

   build-depends:    base,
                     timeit,
                     QuickCheck,
                     quickcheck-instances,
                     containers,
                     time,
                     bytestring,
                     statistics,
                     MissingH,
                     pretty,
                     timeit

   ghc-options:      -Wall -rtsopts
